<resources>
    <string name="app_name">FlufflePuff Soundboard</string>
    <string name="main_1">Brummmmmmmmm</string>
    <string name="main_2">Gasp</string>
    <string name="main_3">Purr</string>
    <string name="main_4">crazy</string>
    <string name="main_5">Van Song</string>
    <string name="main_6">Pfudors -></string>
    <string name="main_7">-</string>
    <string name="main_8">meep</string>
    <string name="pfudors_1">Back</string>
    <string name="pfudors_2">Pfudor</string>
    <string name="pfudors_3">Pfudor Metal</string>
    <string name="pfudors_4">Pfudor rock</string>
    <string name="pfudors_5">Pfudor remix</string>
    <string name="pfudors_6">Pfudor Foozogz</string>
    <string name="pfudors_7">pfudor MLG</string>
    <string name="pfudors_8">Darude Astley - Sandroll</string>
</resources>
