<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="edenflower.merte.flufflepuffsoundboard.Main_screen">

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f9cae9"
            android:onClick="mainscreen"
            android:soundEffectsEnabled="false"
            android:text="@string/pfudors_1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f9cae9"
            android:onClick="Pfudor"
            android:soundEffectsEnabled="false"
            android:text="@string/pfudors_2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f9cae9"
            android:onClick="Pfudor_metal"
            android:soundEffectsEnabled="false"
            android:text="@string/pfudors_3" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f9cae9"
            android:onClick="crazy"
            android:soundEffectsEnabled="false"
            android:text="@string/pfudors_4" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f9cae9"
            android:onClick="van_song"
            android:soundEffectsEnabled="false"
            android:text="@string/pfudors_5" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f9cae9"
            android:onClick="Pfudor_sub"
            android:soundEffectsEnabled="false"
            android:text="@string/pfudors_6" />

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f9cae9"
            android:onClick="Pfudor"
            android:soundEffectsEnabled="false"
            android:text="@string/pfudors_7" />

        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f9cae9"
            android:onClick="meep"
            android:soundEffectsEnabled="false"
            android:text="@string/pfudors_8" />
    </LinearLayout>
</ScrollView>